更新至git reflog===查看详细日志

--- a/index.html
+++ b/index.html
@@ -10,13 +10,20 @@
     git 
     三个区
     工作区：写代码的地方
-    暂存区
-    仓库区
+    暂存区：
+    仓库区：
 
     仓库的演示
-    1、初始化一个仓库
-    2、将代码提交到暂存区   git init
-    3、将代码提交到仓库区   git add 文件
+    1、初始化一个仓库=============git init
+    2、将代码提交到暂存区=========git add 文件
+    3、将代码提交到仓库区=========git commit -m '这里写注释' || git commit . || git commit *
+    4、git checkout 文件名=======用暂存区的文件来覆盖工作目录的文件（切换到上一次的状态）
+    5、git status================检测状态
+    6、git rm --cached===========删除暂存区的文件
+    7、git reset --hard 版本id===恢复到指定版本id
+    8、git log===================查看提交至仓库区的文件
+       git reflog================查看详细日志
+
 
 
 </body>
