更新至创建仓库

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     git 
     三个区
-    工作区：写代码的地方
+    工作区：写代码的地方    
     暂存区：
     仓库区：
 
@@ -23,6 +23,17 @@
     7、git reset --hard 版本id===恢复到指定版本id
     8、git log===================查看提交至仓库区的文件
        git reflog================查看详细日志
+
+    分支
+    9、git branch===============产看分支
+    10、git branch 分支名========创建分支（分支名自己定义）
+    11、git checkout 分支名======切换分支
+        切换分支是，必须先让当前分支提交 add + commit
+    12、git merge 分支名=========合并两个分支
+    13、git branch -d 分支名=====删除分支（合并后的分支才能删除）（-D ===强制删除）
+        14、git stash 分支名=========将文件剪切并临时存储剪切的部分文件
+        15、git stash pop============将剪切的部分文件还原（恢复）
+    16、git push 远程仓库地址 分支名===将本地仓库中的某个分支提交到远程仓库中
 
 
 
