更新至创建远程仓库及配置别名

--- a/index.html
+++ b/index.html
@@ -31,9 +31,14 @@
         切换分支是，必须先让当前分支提交 add + commit
     12、git merge 分支名=========合并两个分支
     13、git branch -d 分支名=====删除分支（合并后的分支才能删除）（-D ===强制删除）
+        -------了解点-------
         14、git stash 分支名=========将文件剪切并临时存储剪切的部分文件
         15、git stash pop============将剪切的部分文件还原（恢复）
+    创建远程仓库
     16、git push 远程仓库地址 分支名===将本地仓库中的某个分支提交到远程仓库中
+    17、git remote add 别名 远程仓库地址 分支名
+    18、git push 别名 分支名（进行17、操作后每次提交可缩写成此格式）
+    19、git push -u 别名 分支名（下次提交时只需输入git push）
 
 
 
